2007-06-24  Brian Nickel <brian.nickel@gmail.com>
	* src/TagLib/Id3v2/Tag.cs: Fixed bug in commit from 2007-06-20.
	TPE2 and TPE1 were being swapped when they were stored. (Thanks to
	jmurphy for the but report.)

svn path=/trunk/taglib-sharp/; revision=80640

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-24  Brian Nickel <brian.nickel@gmail.com>
 
+	* src/TagLib/Id3v2/Tag.cs: Fixed bug in commit from 2007-06-20.
+	TPE2 and TPE1 were being swapped when they were stored. (Thanks to
+	jmurphy for the but report.)
+
+2007-06-24  Brian Nickel <brian.nickel@gmail.com>
+
 	* src/TagLib/Id3v2/Frames/CommentsFrame.cs: Split the string into 3
 	pieces instead of 2. This way nil delimiters and badly formatted strings
 	don't mess up the value. (Thanks to gozza11 for the but report.)
