2007-06-25  Brian Nickel <brian.nickel@gmail.com>
	* src/TagLib/Id3v2/Frames/PrivateFrame.cs: Set to this.data instead of
	data in constructor. Thanks to pipes for the bug report.)
	
	* configure.ac: Make the fourth part of the assembly version equal to
	the SVN revision.

svn path=/trunk/taglib-sharp/; revision=80676

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-25  Brian Nickel <brian.nickel@gmail.com>
+
+	* src/TagLib/Id3v2/Frames/PrivateFrame.cs: Set to this.data instead of
+	data in constructor. Thanks to pipes for the bug report.)
+	
+	* configure.ac: Make the fourth part of the assembly version equal to
+	the SVN revision.
+
 2007-06-24  Brian Nickel <brian.nickel@gmail.com>
 
 	+-------------+
@@ -17,18 +25,18 @@
 
 	* src/TagLib/Id3v2/Tag.cs: Fixed bug in commit from 2007-06-20.
 	TPE2 and TPE1 were being swapped when they were stored. (Thanks to
-	jmurphy for the but report.)
+	jmurphy for the bug report.)
 
 2007-06-24  Brian Nickel <brian.nickel@gmail.com>
 
 	* src/TagLib/Id3v2/Frames/CommentsFrame.cs: Split the string into 3
 	pieces instead of 2. This way nil delimiters and badly formatted strings
-	don't mess up the value. (Thanks to gozza11 for the but report.)
+	don't mess up the value. (Thanks to gozza11 for the bug report.)
 
 2007-06-22  Brian Nickel <brian.nickel@gmail.com>
 
 	* src/TagLib/Id3v2/Tag.cs: Remove picture frames if Picture is set to
-	null or an empty array. (Thanks to wilson for the but report.)
+	null or an empty array. (Thanks to wilson for the bug report.)
 
 2007-06-20  Brian Nickel <brian.nickel@gmail.com>
 
